--- a/home.html
+++ b/home.html
@@ -135,7 +135,13 @@
           <p class="user-review-description">I used to love coming here before work took me far, far away.  Good drink, good company, and a great view overlooking the Seine river.  Now that I'm back in the area, I've been trying to bring the family here whenever I can.</p>
         </div>
         <div class="col-xs-12">
-          <p class="user-rating">*****</p>
+          <p class="user-rating">
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+          </p>
         </div>
         <hr />
       </div>
@@ -148,7 +154,12 @@
           <p class="user-review-description">I had a fun time there but lost a lot of money.  Beware of the hustlers at the pool table.</p>
         </div>
         <div class="col-xs-12">
-          <p class="user-rating">****</p>
+          <p class="user-rating">
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+          </p>
         </div>
         <hr />
       </div>
@@ -179,7 +190,10 @@
           <p class="user-review-description">Never been around more pompous and arrogant people...  Even the staff had an unshakeable air of superiority.  The walruses were pretty cool though.</p>
         </div>
         <div class="col-xs-12">
-          <p class="user-rating">**</p>
+          <p class="user-rating">
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+          </p>
         </div>
         <hr />
       </div>
@@ -210,7 +224,11 @@
           <p class="user-review-description">This place is an eyesore, but I did save a lot of money.</p>
         </div>
         <div class="col-xs-12">
-          <p class="user-rating">***</p>
+          <p class="user-rating">
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+          </p>
         </div>
         <hr />
       </div>
@@ -241,7 +259,12 @@
           <p class="user-review-description">The service was great and I had a good view of London from my room.</p>
         </div>
         <div class="col-xs-12">
-          <p class="user-rating">****</p>
+          <p class="user-rating">
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+          </p>
         </div>
         <hr />
       </div>
@@ -272,7 +295,13 @@
           <p class="user-review-description">This was even better than the one at the center of London.  I had a few pints, accidentally threw a dart into the telly, and fought off a crowd of angry Arsenal fans trying to watch some footy.</p>
         </div>
         <div class="col-xs-12">
-          <p class="user-rating">*****</p>
+          <p class="user-rating">
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+          </p>
         </div>
         <hr />
       </div>
@@ -303,7 +332,11 @@
           <p class="user-review-description">The workers here can be right t***s.  Some cheeky fellow asked me if I wanted boar meat.  BOAR MEAT... with lager?  Come on, mate.</p>
         </div>
         <div class="col-xs-12">
-          <p class="user-rating">***</p>
+          <p class="user-rating">
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+          </p>
         </div>
         <hr />
       </div>
@@ -334,7 +367,11 @@
           <p class="user-review-description">Decided to take a trip to Spain.  Had some sangria and tapas here, but the local kept looking at me funny.</p>
         </div>
         <div class="col-xs-12">
-          <p class="user-rating">***</p>
+          <p class="user-rating">
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+          </p>
         </div>
         <hr />
       </div>
@@ -365,7 +402,13 @@
           <p class="user-review-description">I am from Germany and I stay here everytime I am in the area.  This hotel has unmatched food and service.</p>
         </div>
         <div class="col-xs-12">
-          <p class="user-rating">*****</p>
+          <p class="user-rating">
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+          </p>
         </div>
         <hr />
       </div>
@@ -378,7 +421,13 @@
           <p class="user-review-description">I had a jolly good time.</p>
         </div>
         <div class="col-xs-12">
-          <p class="user-rating">*****</p>
+          <p class="user-rating">
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+            <span class="glyphicon glyphicon-star"></span>
+          </p>
         </div>
         <hr />
       </div>
