Deleted unused repreated id madrid-hotel1

--- a/home.html
+++ b/home.html
@@ -341,7 +341,7 @@
       </div>
     </div>
 
-    <div id="madrid-hotel1" class="row madrid listing">
+    <div class="row madrid listing">
       <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal">
         <div class="col-xs-12 text-center">
           <h2 class="hotel-name">Adelmo's</h2>
@@ -376,7 +376,7 @@
       </div>
     </div>
 
-    <div id="madrid-hotel1" class="row madrid listing">
+    <div class="row madrid listing">
       <div class="col-xs-12 col-md-8 col-md-offset-2 hotel" data-toggle="modal">
         <div class="col-xs-12 text-center">
           <h2 class="hotel-name">Malagua</h2>
