--- a/home.html
+++ b/home.html
@@ -570,12 +570,13 @@
       </div>
     </div>
   </div>
-<div class="container-fluid footer">
-  <div class="row">
+  <div class="container-fluid footer">
+    <div class="row">
+      
+    </div>
     
   </div>
-  
-</div>
+  <div class="certifiedByAlex">This Webpage had been certified by Alex Giordano</div>
 
 
   <!-- TODO List of hotels that appear according to destination selected  -->
